--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,182 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Sono:wght@500&display=swap');
+
+/* UNIVERSAL STYLES */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overscroll-behavior: none;
+}
+
+body {  
+  background-color: #181818;
+  height: 100vh;
+  font-family: 'Sono', sans-serif;
+  color: rgba(255, 255, 255, 0.8);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  text-align: center;
+  display: inline-block;
+  margin: 1.5rem 0 1.5rem 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+hr {
+  width: 70%;
+  margin: 0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  background-color: #ff3caa99;
+  border: none;
+  border-radius: 1rem;
+  width: 120px;
+  padding: 5px;
+  font-family: 'Sono', sans-serif;
   color: white;
+  margin: 0.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  background-color: #FF3CAC;
+  background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+  width: 30vw;
+  height: 40vh;
+  border: 5px solid rgba(255, 255, 255, 0.559);
+  border-radius: 25%;
+  margin: 0 auto;
+  margin-top: 10%;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* NAVIGATION */
+
+nav {
+  margin: 0 0 5rem 0;
+  height: 110px;
+  background-color: #FF3CAC;
+  background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+}
+
+ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+  font-size: 1.8rem;
+}
+
+li {
+  margin: 1rem;
+  padding: 1rem;
+  letter-spacing: 2px;
+}
+
+a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+footer {
+  height: 55px;
+  width: 100vw;
+  background-color: #FF3CAC;
+  background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+  position: absolute;
+  bottom: 0;
+
+}
+.home {
+  height: 65vh;
+  width: 100vw;
+  background-image: url(logo512.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+/* PALINDROME */
+
+span {
+  margin: 1rem;
+}
+
+h2 {
+  margin-top: 10%;
+  margin-bottom: 1rem;
+}
+
+input {
+  margin: 1rem;
+  padding: 0.5rem;
+  border-radius: 1rem;
+  border: none;
+  font-family: 'Sono', sans-serif;
+}
+
+label {
+  padding: 1rem;
+}
+
+/* BUBBLE */
+
+.result {
+  height: 50px;
+  margin: 1rem;
+}
+
+/* QUEUE */
+
+.queue {
+  display: flex;
+  flex-direction: horizontal;
+  height: 110px; 
+  margin: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.queue-item {
+  width: 1.5rem;
+  height: 1.5rem;
+  background: #ff3caa99;
+  color: white;
+  border-radius: 50%;
+  margin: 0.2rem;
+  padding: 0.2rem;
+  text-align: center;
+}
+
+/* STACK */
+
+.stack {
+  position: absolute;
+  left: 3rem;
+  top: 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  height: 170px;
+  margin: 1rem;
+
+}
+
+.stack-item {
+  width: 1.5rem;
+  height: 1.5rem;
+  background: #ff3caa99;
+  border-radius: 50%;
+  margin: 0.2rem;
+  padding: 0.2rem;
+  text-align: center;
+}
+
+.bottom-cont {
+  position: absolute;
+  bottom: 1rem;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
